--- a/code-along.html
+++ b/code-along.html
@@ -7,6 +7,7 @@
         <div class="navbar">
             <a href="index.html">Do Now</a>
             <a href="code-along.html">Code Along</a>
+            <link href="style.css" rel="stylesheet">
         </div>
 
         <!-- Instructions: fix the errors in this HTML code to make it render properly. -->
