--- a/code-along.html
+++ b/code-along.html
@@ -16,16 +16,17 @@
         <p class="description">Below, you should see an image of Pikachu:</p>
 
         <!-- 1. Something's wrong with our image tag. It should display our photo of pikachu. -->
-        <img class="pikachu" scr="https://static.wikia.nocookie.net/pokemon/images/6/6c/Char-pikachu.png/revision/latest/scale-to-width/360?cb=20190430034300" alt="Pikachu's image should appear here.">
+        <img class="pikachu" src="https://static.wikia.nocookie.net/pokemon/images/6/6c/Char-pikachu.png/revision/latest/scale-to-width/360?cb=20190430034300" alt="Pikachu's image should appear here.">
 
         <!-- 2. The unordered list should include Pikachu. Add another list item. Something is also wrong with Charmander's tag...-->
         <ul class="pokemon-list">
             <li>Bulbasaur</li>
-            <li>Charmander<li>
+            <li>Charmander</li>
+            <li>Pikachu</ll>
         </ul>
 
         <!-- 3. Fix the anchor tag to make it navigate to "https://www.pokemon.com" -->
-        <a href="https://www.pokemo" class="pokemon-link">Visit the official Pokémon Website</a>
+        <a href="https://www.pokemon.com" class="pokemon-link">Visit the official Pokémon Website</a>
 
         <p class="pikachu-paragraph">This paragraph, mentioning Pikachu, should be yellow.</p>
 
